# django-api-template

./: .dockerignore  .gitignore  Dockerfile  gunicorn.conf.py  manage.py  pyproject.toml
apps/root/: urls.py  views.py
common_lib/dataclass/: api_spec.py  validate.py
common_lib/error_codes/: error_codes.py
common_lib/error_codes/validate/: validate_error.py
common_lib/errors/: __init__.py  exception.py  model.py
common_lib/infra/: athena.py  mysql.py  mysql_no_pool.py  s3.py  s3_session.py  sqs.py  sqs_bulk.py
common_lib/log/: fast_api_logger.py  flask_logger.py  general_logger.py  handler.py  pipeline_logger.py
common_lib/models/: img_feature.py  intra_similarity.py  message.py  pipeline_logger.py  response.py
common_lib/models/tagger_category_group/: accessory.py  bag.py  clothing.py  common.py  hat.py  jewelry.py  shoes.py
common_lib/modules/: context_manager.py  error_handler.py
common_lib/pydantic_type/: numpy_type.py
common_lib/response/: __init__.py  common_response.py
common_lib/utils/: __init__.py  accept_language_parser.py  array_chunk.py  db_cursor.py  graceful_kill_helper.py  image_downloader.py  image_to_webp.py  img_feature.py  json_serializer.py  singleton.py  slack.py  split_s3_path.py  time_measure.py  ulid_generator.py
config/: .env  config.py  settings.py  urls.py
config/settings/: common.py  dev.py  local.py  prod.py
docker/run_command/: start.sh
middleware/: response_middleware.py
scripts/: docker.build.sh  docker.run.sh  generate_secret_key.py  runserver.sh
