[tool.poetry]
name = "django-api-template"
version = "0.1.0"
description = ""
authors = ["Allen <jihun3353@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
ujson = "^5.8.0"
flake8 = "^6.1.0"
mysqlclient = "2.1.1"
whitenoise = "^6.6.0"
python-ulid = "^1.1.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | common_lib
)/
'''
